spacing issues on homepage

--- a/src/sass/theme/_home-about.scss
+++ b/src/sass/theme/_home-about.scss
@@ -1,6 +1,10 @@
 .home-about {
   padding: 75px 0 100px 0;
   text-align: center;
+
+  p {
+    padding-bottom: 20px;
+  }
 }
 
 .home-about--content {
