--- a/src/sass/theme/_home-accident.scss
+++ b/src/sass/theme/_home-accident.scss
@@ -5,10 +5,15 @@
 }
 
 .home-accident--content {
-  width: 900px;
+  width: 910px;
   margin: 0 auto;
 
+  h3 {
+    letter-spacing: 0.5px;
+  }
+
   ul {
+    padding-top: 10px;
     text-align: left;
     list-style-type: decimal;
   }
