--- a/src/sass/theme/_home-services.scss
+++ b/src/sass/theme/_home-services.scss
@@ -16,6 +16,10 @@
     padding-bottom: 50px;
   }
 
+  .widget-title {
+    padding-bottom: 10px;
+  }
+
 }
 
 .card {
